# flask-realworld-template

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  config.py  docker-compose.yml  manager.py  pyproject.toml  requirements.txt  settings.toml  start.sh
app/: __init__.py  response.py
app/api/: __init__.py  bp.py  constants_redis_key.py  shortcuts.py
app/api/user/: __init__.py  token.py  user.py
app/core/: constants.py  json_encoder.py  logger.py  response.py
app/core/database/: peewee_db.py
app/ext/: __init__.py
app/ext/database/: __init__.py  peewee_db.py  redis.py
app/help/: bp.py  shortcuts.py
app/middleware/: __init__.py  handler.py  permission.py
app/model/: _base.py  user.py
app/templates/: hello.html
app/utils/: date_utils.py
app/validator/: __init__.py  base.py  conveter.py
app/validator/user/: val_token.py  val_user.py
deploy/: mysql-docker-compose.yml  pg-docker-compose.yml
tests/: conftest.py
tests/api/user/: test_token.py  test_user.py
tests/api/utils/: __init__.py
