[tool.poetry]
name = "flask-realworld-template"
version = "0.1.0"
description = ""
authors = ["xbodidi <alonebo.zhou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-jwt-extended = "^4.6.0"
peewee = "^3.17.1"
dynaconf = "^3.2.4"
redis = "^5.0.1"
flask-pydantic = "^0.12.0"
flask-cors = "^4.0.0"
psycopg2-binary = "^2.9.9"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
autoflake = "^2.3.0"
isort = "^5.13.2"
pytest = "^8.0.1"
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
